* Fix specific-to alignment issue on ~便當 as reported by @vipconrad

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -119,7 +119,7 @@ div.cn-specific {
         display: inline;
         font-size: 40%;
         position: absolute;
-        margin-top: 1ex;
+        margin-top: 2.5ex;
         @include fonts;
     }
     .english {
